[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 

[tool.setuptools]
packages = [
    "ragatouille",
    "ragatouille.models",
    "ragatouille.data",
    "ragatouille.integrations",
    "ragatouille.negative_miners",
]

[project]
name = "RAGatouille" 
version = "0.0.8post2"
description = "Library to facilitate the use of state-of-the-art retrieval models in common RAG contexts."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["reranking", "retrieval", "rag", "nlp"]
authors = [
  {name = "Ben Clavié", email = "bc@answer.ai" }
]
maintainers = [
  {name = "Ben Clavié", email = "bc@answer.ai" }
]

dependencies = [
  "llama-index",
  "faiss-cpu",
  "langchain_core",
  "colbert-ai>=0.2.19",
  "langchain",
  "onnx",
  "srsly",
  "voyager",
  "torch>=1.13",
  "fast-pytorch-kmeans",
  "sentence-transformers",
]


[project.optional-dependencies]
all = [
    "llama-index",
    "langchain",
    "rerankers",
    "voyager",
]
llamaindex = ["llama-index"]
langchain = ["langchain"]
train = ["sentence-transformers", "rerankers"]

[project.urls]
"Homepage" = "https://github.com/bclavie/ragatouille"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::Warning"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "*.ipynb",
    "examples",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
output-format = "grouped"

target-version = "py39"

[tool.ruff.lint]
select = [
  # bugbear rules
  "B",
  "I",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
]
ignore = [
  "B006",
  "B018",
]

unfixable = [
  "T201",
  "T203",
]
ignore-init-module-imports = true