[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 

[tool.setuptools]
packages = [
    "ragatouille",
    "ragatouille.models",
    "ragatouille.data",
    "ragatouille.integrations",
    "ragatouille.negative_miners",
]

[project]
name = "RAGatouille" 
version = "0.0.9"
description = "Library to facilitate the use of state-of-the-art retrieval models in common RAG contexts."
keywords = ["reranking", "retrieval", "rag", "nlp"]
authors = [
  {name = "Ben Clavié", email = "bc@answer.ai" }
]
maintainers = [
  {name = "Ben Clavié", email = "bc@answer.ai" }
]
license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
  "llama-index",
  "faiss-cpu",
  "langchain_core",
  "colbert-ai>=0.2.19",
  "langchain",
  "onnx",
  "srsly",
  "voyager",
  "torch>=1.13",
  "fast-pytorch-kmeans",
  "sentence-transformers",
]

[project.optional-dependencies]
all = [
    "llama-index",
    "langchain",
    "rerankers",
    "voyager",
]
llamaindex = ["llama-index"]
langchain = ["langchain"]
train = ["sentence-transformers", "pylate", "rerankers"]

[project.urls]
"Homepage" = "https://github.com/answerdotai/ragatouille"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::Warning"
]

target-version = "py39"